fixed z index on tooltip being hidden by bubble graph

--- a/css/main.css
+++ b/css/main.css
@@ -388,6 +388,7 @@ div.graph_description strong {
     line-height: 1;
     position: absolute;
     pointer-events: none;
+    z-index: 10000;
 }
 
 .hidden { 
